# ITIG

dePrimerCurso/segundoCuatrimestre/laboratoriodeMetodologiadelaProgramacion/code/version/one/source/: basic.pp  main.pas  utils1.pp  utils2.pp
dePrimerCurso/segundoCuatrimestre/laboratoriodeMetodologiadelaProgramacion/code/version/one/test_files/: pruebas.txt
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/: .directory
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.1/Codigo/Carril/include/: Makefile  Makefile.am  Makefile.in  carril.h~  dato.h~  estadisticas.c  estadisticas.h~  gulib.h  simulador.h~  vehiculo.c  vehiculo.h~  vehiculos.h~
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.1/Codigo/Carril_Distribucion_Normal/include/: Makefile  Makefile.am  Makefile.in  carril.h  dato.c  gulib.h  simulador.c  vehiculo.c~  vehiculo.h  vehiculo.h~  vehiculos.h
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.1/Codigo/Carril_Distribucion_Normal/src/: Makefile  Makefile.am  Makefile.in  carril_distribucion_normal
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.1/Codigo/Carril_Distribucion_Normal/src/.deps/: main.Po
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.2/Codigo/Semaforo/include/: Makefile  Makefile.am  Makefile.in  carril.c  dato.h  entidad_trafico.c  estadisticas.c  semaforo.c  simulador.c  simulador.c~  simulador.h  simulador.h~  vehiculo.c~  vehiculo.h~  vehiculos.c~
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.2/Codigo/Semaforo/src/: Makefile  Makefile.am  Makefile.in  semaforo
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.2/Codigo/Stop/include/: Makefile  Makefile.am  Makefile.in  carril.h  dato.c  dato.h  entidad_trafico.c  simulador.c  simulador.c~  simulador.h~  vehiculo.c  vehiculo.h  vehiculo.h~  vehiculos.h  vehiculos.h~
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.3/Codigo/Interseccion/include/: Makefile  Makefile.am  Makefile.in  carril.c~  carril.h  dato.c  entidad_trafico.c~  entidad_trafico.h~  estadisticas.c  gulib.h  interseccion.c~  interseccion.h  interseccion.h~  simulador.c  simulador.c~  simulador.h~  tem_cola.h  vehiculo.c  vehiculo.c~  vehiculo.h~  vehiculos.c~  vehiculos.h~
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.3/Codigo/Interseccion/src/: Makefile  Makefile.am  Makefile.in  interseccion
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.3/Codigo/Interseccion/src/.deps/: main.Tpo
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/Pract.4/Codigo/Grafo/include/: Makefile  Makefile.am  Makefile.in  carril.h  carril.h~  estadisticas.h  interseccion.c  interseccion.h  semaforo.c  semaforo.c~  simulador.c  vehiculos.h  vehiculos.h~
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/practica1/carril/: .directory  .tm_project.cache
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/practica1/carrilDistribucionNormal/: .directory
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/practica2/semaforo/: .directory
deSegundoCurso/primerCuatrimestre/estructuradeDatos/code/version/one/practica2/stop/: .directory
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaConcurrenteyDistribuida/code/ciudadDeportiva/: build.xml
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaConcurrenteyDistribuida/code/ciudadDeportiva/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaConcurrenteyDistribuida/memory/: aneA.aux  aneA.tex  aneA.tex.backup  bib.aux  bib.tex  bu.aux  cap1.aux  cap1.tex  cap1.tex.backup  cap1.tex.bak  cap2.aux  cap2.tex  cap2.tex.backup  fedeErratas.tex  main.aux  main.bbl  main.blg  main.dvi  main.ilg  main.lof  main.out  main.ps  main.tex  main.toc  pre.aux  pre.tex  prologo.tex
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaConcurrenteyDistribuida/memory/images/: botonDetener.eps  botonReanudar.eps  botonReanudar.xcf  findeHilos.eps  generalCiudadDeportiva.eps  generalCiudadDeportiva.ps
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaConcurrenteyDistribuida/memory/uml/: CampoGolf.1  CampoGolf.mp  CiudadDeportiva.1  CiudadDeportiva.mp  CiudadRMI.1  CiudadRMI.mp  Deportista.1  Deportista.mp  ModuloControl.1  ModuloControl.mp  Piscina.1  Piscina.mp  PlantillaDeportista.1  PlantillaDeportista.mp  SalaMusculacion.1  SalaMusculacion.mp  dCasosdeUso.1  dCasosdeUso.mp  iCiudadRMI.1  iCiudadRMI.mp
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaFuncional/code/: sudokuDodeka.ml
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaFuncional/fonts/: Sudoku.txt
deSegundoCurso/segundoCuatrimestre/laboratoriodeProgramacionAvanzada/practicaFuncional/memory/: bib.aux  cap1.aux  cap1.tex  cap1.tex.backup  cap1.tex~  cap2.aux  cap2.tex  cap2.tex.backup  cap2.tex~  cap3.aux  cap3.tex  cap3.tex~  lib.bib  lib.bib~  main.aux  main.bbl  main.blg  main.dvi  main.ist  main.out  main.ps  main.tex  main.tex~  main.toc  pre.aux  pre.tex  tabla_notacion.tex
(+186 files in other folders)
