## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

carril_includedir = $(pkgincludedir)

carril_include_DATA = \
	carril.h\
	simulador.h\
	dato.h\
	estadisticas.h\
	gulib.h\
	vehiculo.h\
	vehiculos.h\
	carril.c\
	dato.c\
	estadisticas.c\
	simulador.c\
	vehiculo.c\
	vehiculos.c

EXTRA_DIST = $(carril_include_DATA)
