## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

carril_distribucion_normal_includedir = $(pkgincludedir)

carril_distribucion_normal_include_DATA = \
	carril.h\
	dato.h\
	estadisticas.h\
	gulib.h\
	simulador.h\
	vehiculo.h\
	vehiculos.h\
	carril.c\
	dato.c\
	estadisticas.c\
	simulador.c\
	vehiculo.c\
	vehiculos.c

EXTRA_DIST = $(carril_distribucion_normal_include_DATA)
