## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = carril_distribucion_normal

carril_distribucion_normal_SOURCES = \
	main.cc

carril_distribucion_normal_LDFLAGS = 

carril_distribucion_normal_LDADD = 

