## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

semaforo_includedir = $(pkgincludedir)

semaforo_include_DATA = \
	carril.h\
	dato.h\
	entidad_trafico.h\
	estadisticas.h\
	gulib.h\
	semaforo.h\
	simulador.h\
	tem_cola.h\
	vehiculo.h\
	vehiculos.h\
	carril.c\
	dato.c\
	entidad_trafico.c\
	estadisticas.c\
	semaforo.c\
	simulador.c\
	vehiculo.c\
	vehiculos.c

EXTRA_DIST = $(semaforo_include_DATA)
