## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = semaforo

semaforo_SOURCES = \
	main.cc

semaforo_LDFLAGS = 

semaforo_LDADD = 

