## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

stop_includedir = $(pkgincludedir)

stop_include_DATA = \
	dato.h\
	entidad_trafico.h\
	estadisticas.h\
	gulib.h\
	simulador.h\
	tem_cola.h\
	vehiculo.h\
	vehiculos.h\
	carril.c\
	dato.c\
	entidad_trafico.c\
	estadisticas.c\
	simulador.c\
	vehiculo.c\
	vehiculos.c\
	carril.h

EXTRA_DIST = $(stop_include_DATA)
