## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

interseccion_includedir = $(pkgincludedir)

interseccion_include_DATA = \
	carril.h\
	dato.h\
	entidad_trafico.h\
	estadisticas.h\
	gulib.h\
	simulador.h\
	tem_cola.h\
	vehiculo.h\
	interseccion.h\
	dato.c\
	entidad_trafico.c\
	estadisticas.c\
	interseccion.c\
	simulador.c\
	vehiculo.c\
	carril.c\
	vehiculos.h\
	vehiculos.c

EXTRA_DIST = $(interseccion_include_DATA)
