## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

grafo_includedir = $(pkgincludedir)

grafo_include_DATA = \
	carril.c\
	carril.h\
	dato.c\
	dato.h\
	entidad_trafico.c\
	entidad_trafico.h\
	estadisticas.c\
	estadisticas.h\
	gulib.h\
	interseccion.c\
	interseccion.h\
	simulador.c\
	simulador.h\
	tem_cola.h\
	vehiculo.c\
	vehiculo.h\
	semaforo.h\
	vehiculos.h\
	semaforo.c\
	vehiculos.c

EXTRA_DIST = $(grafo_include_DATA)
